--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 .task-list-item::before {
   @apply hidden;
 }
@@ -28,4 +29,11 @@ input:-webkit-autofill:focus {
   transition:
     background-color 600000s 0s,
     color 600000s 0s;
+}
+
+
+/* custom font family */
+@font-face{
+  font-family: "Ali-Font";
+  src: url("/public/static/font/AlimamaDongFangDaKai-Regular.ttf") format("ttf");
 }
